<resources>
    <string name="app_name">Karumi-Code-Test</string>
    <string name="msg_login_incorrect">Wrong credential</string>
    <string name="bt_validating">Processing...</string>
    <string name="bt_login">Login</string>
    <string name="bt_logout">Logout</string>
    <string name="et_password">Password</string>
    <string name="et_username">Username</string>
    <string name="iv_logo">Karumi\'s logo</string>
    <string name="msg_invalid_username">Invalid username</string>
    <string name="msg_login_correct">Welcome user</string>
</resources>